[gd_scene load_steps=4 format=3 uid="uid://de0rhj43vs5sr"]

[ext_resource type="Texture2D" uid="uid://na6d0jhu5cwu" path="res://Assets/UI/Banners/Banner_Vertical.png" id="1_suyn8"]
[ext_resource type="Script" path="res://Scripts/world/pause_menu.gd" id="1_wmoob"]
[ext_resource type="PackedScene" uid="uid://b0enw06vowsx0" path="res://Sceens/world/quest_ui.tscn" id="3_wt28a"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmoob")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_suyn8")

[node name="CenterContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 62.0
offset_top = 49.0
offset_right = 149.0
offset_bottom = 150.0
scale = Vector2(0.8, 0.8)
alignment = 1

[node name="continue" type="Button" parent="TextureRect/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTINUE"

[node name="quest" type="Button" parent="TextureRect/CenterContainer"]
layout_mode = 2
text = "QUEST"

[node name="exit" type="Button" parent="TextureRect/CenterContainer"]
layout_mode = 2
text = "EXIT"

[node name="quest_ui" parent="." instance=ExtResource("3_wt28a")]
visible = false

[connection signal="pressed" from="TextureRect/CenterContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/quest" to="." method="_on_quest_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="close" from="quest_ui" to="." method="_on_quest_ui_close"]
